--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <jackson.version>1.9.13</jackson.version>
     <commons.io.version>2.4</commons.io.version>
     <spring.security.version>3.2.1.RELEASE</spring.security.version>
+      <!-- AspectJ -->
+      <aspectj.version>1.7.4</aspectj.version>
   </properties>
   <dependencies>
       <dependency>
@@ -163,6 +165,18 @@
                   <artifactId>spring-aop</artifactId>
               </exclusion>
           </exclusions>
+      </dependency>
+      <!-- AspectJ dependencies -->
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjrt</artifactId>
+          <version>${aspectj.version}</version>
+          <scope>runtime</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjtools</artifactId>
+          <version>${aspectj.version}</version>
       </dependency>
   </dependencies>
   <build>
